--- a/muju/content/show_picture.html
+++ b/muju/content/show_picture.html
@@ -27,9 +27,9 @@ var atts="";
 </script>
 
 <!--content:start-->
-<div class="topadcs">
-    <a href="/leddj.html" title="机电外壳模具"><img src="{DIY_PATH}muju/images/common/pbanner.jpg" title="机电外壳模具" alt="机电外壳模具" /></a>
-</div>
+    <div class="topadcs">
+        <a href="{$CATEGORYS[$catid][url]}" title="{$CATEGORYS[$catid][catname]}"><img src="{DIY_PATH}muju/images/common/pbanner.jpg" title=" {$CATEGORYS[$catid][catname]}" alt=" {$CATEGORYS[$catid][catname]}" /></a>
+    </div>
 <div class="content">
     <div class="rightl">
         <div class="righttop">
