--- a/muju/content/footer.html
+++ b/muju/content/footer.html
@@ -27,3 +27,11 @@
     </div>
 </div>
 <script src="{DIY_PATH}muju//js/rollup.min.js" type="text/javascript"></script>
+<!--[if IE 6]>
+<script src="/Skins/Default/js/DD_belatedPNG.js"></script>
+<![endif]-->
+<!-- 返回顶部 -->
+
+<script type="text/javascript">
+    document.body.onselectstart = document.body.oncontextmenu = function () { return false; }
+</script> 
